# Salvo-Svelte

./: Makefile
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controller/: auth_controller.rs  employee_controller.rs  license_controller.rs  mod.rs
backend/src/globals/: memory_session.rs  mod.rs
backend/src/middleware/: memory_store.rs  mod.rs  session_middleware.rs
backend/src/routes/: frontend_route.rs  mod.rs  open_routes.rs  protected_routes.rs
frontend/: bun.lockb  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1704273248736-739780d1d086d.mjs
frontend/src/lib/: Counter.svelte  Counters.svelte.ts
